--- a/README.org
+++ b/README.org
@@ -12,6 +12,8 @@ These is no feedback from the fan to the remote, so we can enable remote control
 
 [[img/minka_aire_remote_back.jpg][Picture of MinkaAire remote circuit board back]]
 
+[[img/minka_aire_remote_button.jpg][Picture of MinkaAire remote circuit board front with button pad]]
+
 * Relays
 
 Using a 5V relay module similar to this one. The important fact to note is that the Vcc is common and the pins must be set to ground in order to activate the relay.
