--- a/README.org
+++ b/README.org
@@ -81,7 +81,10 @@ From [[https://en.wikipedia.org/wiki/Molex_connector][Wikipedia]] these are the 
 
 As measured, I get 12.3V and 5.1V
 
+* Prototype setup on desktop
 
+Here's a photo of the prototype setup on the work bench:
+[[img/proto_board_setup_small.jpg]]
 
 * References
 
